.apex/src/objects/Reservation__c.object
<CustomObject>
    <fields>
        <fullName>Additional_services__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Additional services</label>
        <referenceTo>Additional_services__c</referenceTo>
        <relationshipLabel>Reservations</relationshipLabel>
        <relationshipName>Reservations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Check_In_Date__c</fullName>
        <label>Check-In Date</label>
        <required>true</required>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Check_Out_Date__c</fullName>
        <label>Check-Out Date</label>
        <required>true</required>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Customer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Customer</label>
        <referenceTo>Customer__c</referenceTo>
        <relationshipLabel>Reservations</relationshipLabel>
        <relationshipName>Reservations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Number_of_guests__c</fullName>
        <label>Number of guests</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>6</fullName>
                </value>
                <value>
                    <fullName>7</fullName>
                </value>
                <value>
                    <fullName>8</fullName>
                </value>
                <value>
                    <fullName>9</fullName>
                </value>
                <value>
                    <fullName>10</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Room__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Room</label>
        <referenceTo>Room__c</referenceTo>
        <relationshipLabel>Reservations</relationshipLabel>
        <relationshipName>Reservations</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Reservation</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Customer__c</columns>
        <columns>Room__c</columns>
        <columns>Number_of_guests__c</columns>
        <columns>Check_In_Date__c</columns>
        <columns>Check_Out_Date__c</columns>
        <columns>RECORDTYPE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>RES/{000}</displayFormat>
        <label>Reservation ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Reservations</pluralLabel>
    <recordTypes>
        <fullName>Pre_reservation</fullName>
        <active>true</active>
        <label>Pre-reservation</label>
    </recordTypes>
    <recordTypes>
        <fullName>Reservation</fullName>
        <active>true</active>
        <label>Reservation</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>